--- a/css/services.css
+++ b/css/services.css
@@ -115,17 +115,18 @@
 }
 
 .glow {
-	padding: 0 5px 0px 5px;
-	width: 100px;
+	/*padding: 0 5px 0 5px;*/
+	width: 110px;
 	height: 60px;
-	top: 0;
+	/*top: 0;*/
 	right: 0;
-	bottom: 10;
-	left: 0; 
+	/*bottom: 0;*/
+	left: 0;
 	position: absolute;
 	margin: auto;
-	background: linear-gradient(rgba(255,255,255,0.8),rgba(0,0,0,0));
-	border-radius: 50%;
+	background-color: pink;
+	background: linear-gradient(rgba(255,255,255,0.6),rgba(0,0,0,0));
+	border-radius: 50%;*/
 }
 
 .glow p {
