news section redesign

--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@ html {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	transition: .5s ease;
-	font-family: "Lucida Sans Unicode";
+	/*font-family: "Lucida Sans Unicode";*/
 }
 
 body {
