--- a/css/news.css
+++ b/css/news.css
@@ -1,9 +1,7 @@
 #SNews {
-	z-index: 0;
 	width: 100% auto;
 	height: 700px;
 	/*background-color: rgba(247,120,65,0.7);*/
-	background-color: rgba(0,0,0,0.3);
 	margin: 10% 1% 10% 1%;
 	position: relative;
 	/*border-top-right-radius: 10px;
@@ -14,15 +12,16 @@
 }
 
 .newsContainer {
-	display: inline;
+	background-color: black;
 }
 
 .newsArticles {
 	padding: 3%;
 	float: left;
-	background-image: url("../images/350x150placeholder.png");
+	/*background-image: url("../images/350x150placeholder.png");*/
 	height: 300px;
-	width: 700px;
+	width: 620px;
+	max-width: 800px;
 	margin: 0 auto;
 	margin-left: 25px;
 	margin-bottom: 75px;
@@ -37,7 +36,7 @@
 	display: none;
 	float: left;
 	height: 300px;
-	width: 450px;
+	width: 700px;
 	margin: 0 auto;
 	margin-bottom: 25px;
 	margin-top: 25px;
@@ -58,11 +57,8 @@
 	overflow: hidden;
 }
 
-.article {
-	background-image: url("../images/350x150placeholder.png");
-}
-
 .newsHeadline {
+	max-width: 100%;
 	position: absolute;
 	margin: 0;
 	padding: 0;
@@ -70,53 +66,90 @@
 }
 
 .newsTitle {
-	position: relative;
-	width: 700px;
-	float: left;
-	padding: 10px;
-	font-size: 24px;
-	color: rgba(250,250,250,1);
+	z-index: 2;
+	width: 100%;
+	padding: 10px 10px 5px 10px;
 	background-color: rgba(0,0,0,0.8);
-	margin: 0 auto;
+	margin: auto;
 }
 
-.newsDesc {
+.newsTitle p {
+	margin: auto;
+}
+
+.newsTitle span {
+	margin-left: 5px;
+	font-family: "Utsaah";
+	font-weight: bold;
+	font-size: 24px;
+	color: rgba(250,250,250,1);
+	padding: 0px 6px 0 6px;
+	border-bottom: solid #e34e61;
+}
+
+
+/*.newsDesc {
 	position: relative;
-	width: 700px;
-	float: left;
+	max-width: 600px;
+	display: inline-block;
 	padding: 10px;
 	font-size: 12px;
 	color: rgba(250,250,250,1);
 	background-color: rgba(0,0,0,0.8);
+	margin: auto;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}*/
+
+.newsDesc {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	max-width: 100%;
+	max-height: 25px;
+	padding: 10px 10px 20px 15px;
+	font-size: 12px;
+	color: rgba(250,250,250,1);
+	background-color: rgba(0,0,0,0.8);
 	margin: 0 auto;
+	font-family: "Century Gothic";
 }
 
 .seeLessBtn {
+	margin-left: 15px;
 	position: absolute;
-	float: right;
+	padding: 10px 25px 10px 25px;
+	background-color: #e34e61;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
 
 .seeLessBtn span {
-	text-shadow: 0.5px 0.5px 1px white;
-	color: rgb(20,20,20);
+	text-shadow: 1px 1px 2px black;
+	color: white;
 }
 
-.seeMoreBtn {
-	float: right;
+.seeLessBtn:hover {
+	background-color: #fd9fab;
+	transition: 1s ease;
 }
 
 .seeMoreDiv {
+	height: 54px;
 	box-sizing: border-box;
-	padding: 0 0 15px 15px;
-	clear:left;
+	padding: 9px 0 0 15px;
+	/*clear:left;*/
 	width: 100%;
-	float: right;
+	/*float: right;*/
 	background-color: rgba(0,0,0,0.8);
 }
 
 .seeMoreDiv span{
 	text-shadow: 1px 1px 2px black;
-	color: rgb(200,200,200);
+	color: white;
 }
 
 #newsHeader {
@@ -136,38 +169,6 @@
 	font-family: Arial;
 }
 
-/*#shadow-bottom {
-	text-align: center;
-	z-index: 1;
-	position: absolute;
-	width: 100%;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	background: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1));
-	border-bottom-right-radius: 10px;
-	border-bottom-left-radius: 10px;
-}*/
-
-/*#shadow-top {
-	text-align: center;
-	z-index: 1;
-	position: absolute;
-	width: 100%;
-	top: 0;
-	right: 0;
-	left: 0;
-	background: linear-gradient(rgba(0,0,0,1),rgba(255,255,255,0));
-}*/
-
-/*#shadow-bottom p {
-	color: rgba(255, 255, 255, 0);
-}*/
-
-/*#shadow-top p {
-	color: rgba(255, 255, 255, 0);
-}*/
-
 #news-header {
 	z-index: 2;
 	text-align: center;
@@ -178,7 +179,7 @@
 	line-height: 5.08em;
 	width: 100%;
 	margin: auto;
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: /*rgba(0, 0, 0, 0.8)*/#e34e61;
 	/*border-top-right-radius: 10px;
 	border-top-left-radius: 10px;*/
 }
@@ -191,4 +192,52 @@
 	bottom: 0.5%;
 	right: 0;
 	left: 0;
+	background-color: rgb(244,244,244);
+}
+
+.newsRow {
+	margin: 50px 0 0 50px;
+	float: left;
+	clear: both;
+}
+
+#news1 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+#news2 {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#news3 {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#news4 {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.moreArticle {
+	position: absolute;
+	bottom: 10%;
+	left: 12px;
+	padding: 8px 15px 8px 15px;
+	background-color: #e34e61;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+
+.moreArticle:hover {
+	background-color: #fd9fab;
+	transition: 1s ease;
 }
