--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -4,6 +4,7 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	font-family: Arial, Helmet, Freesans, sans-serif;
+	/*font-family: "Century Gothic",  sans-serif;*/
 	margin: 0;
 	padding: 0;
 	border: 0;
