--- a/css/professionals.css
+++ b/css/professionals.css
@@ -3,13 +3,14 @@
 	width: 100% auto;
 	height: 700px;
 	/*background-color: rgba(247,120,65,0.7);*/
-	background-color: rgba(0,0,0,0.3);
-	margin: 10% 1% 10% 1%;
+	background-color: rgb(232, 226, 214);
+	/*margin: 10% 1% 10% 1%;*/
+	margin: 0 auto;
 	position: relative;
-	-webkit-box-shadow: 0 8px 20px -6px black;
+	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
 }
 
-#shadow-bottom {
+/*#shadow-bottom {
 	text-align: center;
 	z-index: 1;
 	position: absolute;
@@ -17,7 +18,7 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1));
+	/*background: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1));
 }
 
 #shadow-top {
@@ -28,7 +29,7 @@
 	top: 11.5%;
 	right: 0;
 	left: 0;
-	background: linear-gradient(rgba(0,0,0,1),rgba(255,255,255,0));
+	/*background: linear-gradient(rgba(0,0,0,1),rgba(255,255,255,0));
 }
 
 #shadow-bottom p {
@@ -37,19 +38,25 @@
 
 #shadow-top p {
 	color: rgba(255, 255, 255, 0);
-}
+}*/
 
 #professionals-header {
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
 	z-index: 2;
 	text-align: center;
-	color: white;
+	/*color: white;*/
+	color: black;
+	height: 42px;
+	/*overflow: hidden;*/
 }
 
 #professionals-header-background {
-	line-height: 5.08em;
+	/*line-height: 2.08em;*/
 	width: 100%;
-	margin: auto;
-	background-color: rgba(0, 0, 0, 0.8);
+	margin: 0 auto;
+	/*background-color: rgba(0, 0, 0, 0.8);*/
 }
 
 ::-webkit-scrollbar {
@@ -57,14 +64,16 @@
     background: transparent;
 }
 
-#absolute-positioning {
+#absolute-positioning-professionals {
 	z-index: 0;
 	overflow: auto;
 	position: absolute;
-	top: 11.5%;
+	top: 11%;
 	bottom: 0.5%;
 	right: 0;
 	left: 0;
+	/*background-color: rgb(244,244,244);*/
+	background-color: rgb(232, 226, 214);
 }
 
 #table-cell-container {
@@ -81,7 +90,7 @@
 	height: 370px;
 	overflow: hidden;
 	border-radius: 1.2%;
-	margin: 25px 20px 25px 80px;
+	margin: 25px 10px 25px 50px;
 }
 
 .blockContainer:hover {
@@ -169,3 +178,31 @@
 	color: white;
 	transition: 0.5 ease;
 }*/
+
+.lines {
+	/*color: rgba(255, 255, 255, 0);*/
+	/*display: inline;*/
+	width: 100%;
+	/*line-height: 0.5em;*/
+	border-bottom: dotted 1px black;
+	margin: 0 0 10px 0;
+}
+
+.professionalsLinesDiv
+{
+	display: inline-block;
+	width: 35%;
+	/*border: solid 1px blue;*/
+}
+
+.headerDiv h1 {
+	/*border: 1px solid green;*/
+	width: 100%;
+	/*line-height: 2.08em;*/
+	margin: 0 auto;
+}
+
+.professionalsHeaderDiv {
+	display: inline-block;
+	width: 25%;
+}
