--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,7 +1,7 @@
 body {
 	/*background: linear-gradient(to bottom, #fceabb, #f8b500);*/
-	background-image: url("../images/pexels-photo-302905.jpg");
-	background-attachment: fixed;
+	/*background-image: url("../images/pexels-photo-302905.jpg");*/
+	/*background-attachment: fixed;*/
 	font-family: Arial, Helmet, Freesans, sans-serif;
 	margin: 0;
 	line-height: 15px;
