--- a/css/news.css
+++ b/css/news.css
@@ -2,16 +2,20 @@
 	width: 100% auto;
 	height: 700px;
 	/*background-color: rgba(247,120,65,0.7);*/
-	margin: 10% 1% 10% 1%;
+	/*margin: 10% 1% 10% 1%;*/
+	background-color: rgb(232, 226, 214);
+	margin: 0 auto;
 	position: relative;
 	/*border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;*/
-	-webkit-box-shadow: 0 8px 20px -6px black;
+	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
 }
 
 .newsContainer {
+	margin: 0 auto;
+	width: 70%;
 	position: relative;
 	background-color: black;
 }
@@ -23,8 +27,8 @@
 	height: 300px;
 	width: 620px;
 	max-width: 800px;
-	margin: 0 auto;
-	margin-left: 25px;
+	/*margin: 0 auto;*/
+	/*margin-left: 25px;*/
 	margin-bottom: 75px;
 	padding: 0;
 	font-family: Arial, Helmet, Freesans, sans-serif;
@@ -161,39 +165,34 @@
 	color: white;
 }
 
-#newsHeader {
-	margin: 0;
-	width: 100%;
-	height: 100px;
-	color: white;
-	background-color: rgba(0, 0, 0, 0.7);
-}
-
-#newsHeader h1 {
-	width: 100%;
-	margin: 0 auto;
-	text-align: center;
-	box-shadow: -5px 5px 30px black;
-	letter-spacing: 1.5px;
-	font-family: Arial;
-}
-
 #news-header {
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
 	z-index: 2;
 	text-align: center;
-	color: white;
+	/*color: white;*/
+	color: black;
+	height: 42px;
+	/*overflow: hidden;*/
 }
 
 #news-header-background {
-	line-height: 5.08em;
+	/*line-height: 2.08em;*/
 	width: 100%;
-	margin: auto;
-	background-color: /*rgba(0, 0, 0, 0.8)*/#e34e61;
-	/*border-top-right-radius: 10px;
-	border-top-left-radius: 10px;*/
+	margin: 0 auto;
+	/*background-color: rgba(0, 0, 0, 0.8);*/
 }
 
-#absolute-positioning {
+/*#news-header-background h1 {
+	border: 1px solid green;
+	display: block;
+	width: 50%;
+	line-height: 2.08em;
+	margin: 0;
+}*/
+
+#absolute-positioning-news {
 	z-index: 0;
 	overflow: auto;
 	position: absolute;
@@ -201,12 +200,13 @@
 	bottom: 0.5%;
 	right: 0;
 	left: 0;
-	background-color: rgb(244,244,244);
+	/*background-color: rgb(244,244,244);*/
+	background-color: rgb(232, 226, 214);
 }
 
 .newsRow {
 	margin: 50px 0 0 50px;
-	float: left;
+	/*float: left;*/
 	clear: both;
 }
 
@@ -249,4 +249,32 @@
 .moreArticle:hover {
 	background-color: #fd9fab;
 	transition: 1s ease;
+}
+
+.lines {
+	/*color: rgba(255, 255, 255, 0);*/
+	/*display: inline;*/
+	width: 100%;
+	/*line-height: 0.5em;*/
+	border-bottom: dotted 1px black;
+	margin: 0 0 10px 0;
+}
+
+.linesDiv
+{
+	display: inline-block;
+	width: 42.5%;
+	/*border: solid 1px blue;*/
+}
+
+.headerDiv h1 {
+	/*border: 1px solid green;*/
+	width: 100%;
+	/*line-height: 2.08em;*/
+	margin: 0 auto;
+}
+
+.headerDiv {
+	display: inline-block;
+	width: 15%;
 }
