--- a/css/services.css
+++ b/css/services.css
@@ -2,43 +2,46 @@
 	width: 100% auto;
 	height: 800px;
 	/*background-color: rgba(247,120,65,0.7);*/
-	background-color: rgba(0,0,0,0.3);
+	/*background-color: rgba(0,0,0,0.3);*/
+	background-color: rgb(232, 226, 214);
 	/*border: solid 0.5px;*/
-	margin: 10% 1% 10% 1%;
+	/*margin: 10% 1% 10% 1%;*/
+	margin: 0 auto;
 	position: relative;
 	/*border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;*/
 	text-align: center;
-	-webkit-box-shadow: 0 8px 20px -6px black;
+	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
 }
 
-#servicesHeader {
-	top: 0;
-	position: absolute;
-	margin: 0;
-	width: 100%;
-	height: 100px;
-	color: white;
-	background-color: rgba(0, 0, 0, 0.7);
+#services-header {
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
+	z-index: 2;
+	text-align: center;
+	/*color: white;*/
+	color: black;
+	height: 42px;
+	/*overflow: hidden;*/
 }
 
-#serivcesHeader h1 {
+#services-header-background {
+	/*line-height: 2.08em;*/
 	width: 100%;
 	margin: 0 auto;
-	text-align: center;
-	box-shadow: -5px 5px 30px black;
-	letter-spacing: 1.5px;
-	font-family: Arial;
+	/*background-color: rgba(0, 0, 0, 0.8);*/
 }
 
 #serviceWrapper {
-	position: absolute;
-	margin: 13% 0 5% 0;
+	position: relative;
+	/*margin: 13% 0 5% 0;*/
+	margin: 0 auto;
 	text-align: center;
 	height: 100%;
-	width: 100%;
+	width: 70%;
 }
 
 .imgbtn {
@@ -81,7 +84,8 @@
 	height: 43px;
 	width: 200px;
 	margin: auto;
-	color: rgba(234, 234, 234, 0.95);
+	/*color: rgba(234, 234, 234, 0.95);*/
+	color: rgb(10, 10, 10);
 	font-weight: lighter;
 }
 
@@ -131,4 +135,36 @@
 
 .glow p {
 	color: rgba(0,0,0,0);
+}
+
+#marginTop {
+	margin-top: 5%;
+}
+
+.lines {
+	/*color: rgba(255, 255, 255, 0);*/
+	/*display: inline;*/
+	width: 100%;
+	/*line-height: 0.5em;*/
+	border-bottom: dotted 1px black;
+	margin: 0 0 10px 0;
+}
+
+.linesDiv
+{
+	display: inline-block;
+	width: 40%;
+	/*border: solid 1px blue;*/
+}
+
+.headerDiv h1 {
+	/*border: 1px solid green;*/
+	width: 100%;
+	/*line-height: 2.08em;*/
+	margin: 0 auto;
+}
+
+.headerDiv {
+	display: inline-block;
+	width: 15%;
 }
