--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -1,7 +1,7 @@
 body, html {
 	height: 100%;
-	min-height: 100%
-	background-image: url("../images/pexels-photo-302905.jpg");
+	min-height: 100%;
+	/*background-image: url("../images/pexels-photo-302905.jpg");*/
 	background-size: cover;
 	background-attachment: fixed;
 	font-family: Arial, Helmet, Freesans, sans-serif;
