--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -1,11 +1,12 @@
 body {
 	/*background: linear-gradient(to bottom, #fceabb, #f8b500);*/
-	background-image: url("../images/pexels-photo-302905.jpg");
+	/*background-image: url("../images/pexels-photo-302905.jpg");*/
+	/*background-image: url("../images/28.jpg");
 	background-size: cover;
 	background-attachment: fixed;
-	font-family: Arial, Helmet, Freesans, sans-serif;
-	/*font-family: "Century Gothic",  sans-serif;*/
-	margin: 0;
+	font-family: Arial, Helmet, Freesans, sans-serif;*/
+	font-family: "Century Gothic",  sans-serif;
+	margin: 0 auto;
 	padding: 0;
 	border: 0;
 }
@@ -38,19 +39,19 @@ display: none;
 	position: fixed;
 	width: 100%;
 	height: 50px;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(120,120,120,0.4);
 	/*background-color: rgba(255, 255, 255, 0.7);*/ /*linear-gradient(to bottom, #34e89e, #0f3443);*/
 	margin: 0;
-	-webkit-box-shadow: 0 8px 20px -6px black;
+	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
 }
 
-#signinDiv {
+/*#signinDiv {
 	float: left;
 	text-align: center;
 	padding: 0 15px 0 15px;
 	width: 50px;
 	height: 30px;
-}
+}*/
 
 #signinDiv:hover {
 	border-bottom: 5px solid white;
@@ -91,16 +92,16 @@ display: none;
 	padding-left: 0;
 }
 
-#sign-in {
+/*#sign-in {
  	float:left;
  	color:#FFF;
-	/*height:45px;*/
- 	width:/*100px*/auto;
-	/*padding-top:4px;*/
+	/*height:45px;
+ 	width:/*100pxauto;
+	/*padding-top:4px;
 	background-color: rgba(0,0,0,0.1);
-	/*padding-top: 16px;*/
-	/*background-color: rgba(255,255,255,0.7);*/
- }
+	/*padding-top: 16px;
+	/*background-color: rgba(255,255,255,0.7);
+ }*/
  
  #sign-in:hover {
 	/*height: 41px;*/
@@ -159,65 +160,129 @@ display: none;
 	margin-left: 60px;
  }
  
- .topnav li {
+.topnav li #home {
 	float: left;
 	color: white;
 	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
-	height: 31px;
+	height: 25px;
 	list-style: none;
 	padding: 20px 20px 0 20px;
 	transition: .4s ease;
- }
+}
+
+.topnav li #home:hover {
+	border-bottom: 5px solid #a441d0/*white*/ /*#9b2313*/;
+	color: #a441d0;
+}
+
+.topnav li #news {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 25px;
+	list-style: none;
+	padding: 20px 20px 0 20px;
+	transition: .4s ease;
+}
+
+.topnav li #news:hover {
+	border-bottom: 5px solid #e34e61/*#ffe711*/;
+	color: #e34e61;
+}
+
+.topnav li #services {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 25px;
+	list-style: none;
+	padding: 20px 20px 0 20px;
+	transition: .4s ease;
+}
+
+.topnav li #services:hover {
+	border-bottom: 5px solid #4fe2cf/*#77cdff*/;
+	color: #4fe2cf;
+}
+
+.topnav li #professionals {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 25px;
+	list-style: none;
+	padding: 20px 20px 0 20px;
+	transition: .4s ease;
+}
+
+.topnav li #professionals:hover {
+	border-bottom: 5px solid #f77841;
+	color: #f77841;
+}
+
+#signinDiv {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 45px;
+	list-style: none;
+	/*padding: 20px 20px 0 20px;*/
+	transition: .4s ease;
+}
+
+.sign-in {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 30px;
+	list-style: none;
+	padding: 20px 20px 0 20px;
+	transition: .4s ease;
+}
+
+.topnav li {
+	float: left;
+	color: white;
+	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
+	height: 30px;
+	list-style: none;
+	/*padding: 20px 20px 0 20px;*/
+	transition: .4s ease;
+}
  
- .logoandname {
+.logoandname {
 	float: right;
- }
+}
  
- .logoandname li {
+.logoandname li {
 	float: left;
 	list-style: none;
 	border-left: 1px solid rgba(220, 220, 220, 0.0)/*#990000*/;
 	height: 33px;
 	padding: 7px 10px 10px 10px;
- }
+}
  
- /*#top-menu li:hover {
+/*#top-menu li:hover {
 	height: 28px;
- }*/
+}*/
  
- /*#home {
+/*#home {
 	background-color: rgba(0,0,0,0.3);
- }
+}
  
- #news {
+#news {
 	background-color: rgba(0,0,0,0.4);
- }
+}
  
- #services {
+#services {
 	background-color: rgba(0,0,0,0.5);
- }
+}
  
- #professionals {
+#professionals {
 	background-color: rgba(0,0,0,0.6);
- }*/
+}*/
  
- #home:hover {
-	border-bottom: 5px solid #a441d0/*white*/ /*#9b2313*/;
- }
- 
- #news:hover {
-	border-bottom: 5px solid #e34e61/*#ffe711*/;
- }
- 
- #services:hover {
-	border-bottom: 5px solid #4fe2cf/*#77cdff*/;
- }
- 
- #professionals:hover {
-	 border-bottom: 5px solid #f77841;
- }
- 
- #top-menu input {
+#top-menu input {
 	float: right;
 	height: 25px;
 	border: none;
@@ -229,12 +294,12 @@ display: none;
 	margin-bottom: 20px;
 	position: relative;
 	top: -4px;
- }
+}
  
- a{
+a{
 	color: inherit;
 	text-decoration: none;
- }																										/*Top Bar*/
+}																										/*Top Bar*/
  
 
 
