--- a/css/professionals.css
+++ b/css/professionals.css
@@ -2,12 +2,12 @@
 	z-index: 0;
 	width: 100% auto;
 	height: 700px;
-	/*background-color: rgba(247,120,65,0.7);*/
-	background-color: rgb(232, 226, 214);
-	/*margin: 10% 1% 10% 1%;*/
+	/*background-color: rgb(232, 230, 220);*/
 	margin: 0 auto;
 	position: relative;
 	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
+	padding-top: 3%;
+	margin-bottom: 5%;
 }
 
 /*#shadow-bottom {
@@ -48,7 +48,6 @@
 	text-align: center;
 	/*color: white;*/
 	color: black;
-	height: 42px;
 	/*overflow: hidden;*/
 }
 
@@ -68,16 +67,18 @@
 	z-index: 0;
 	overflow: auto;
 	position: absolute;
-	top: 11%;
+	width: 80%;
+	padding-left: 12%;
+	margin: 0 auto;
+	top: 19%;
 	bottom: 0.5%;
 	right: 0;
 	left: 0;
-	/*background-color: rgb(244,244,244);*/
-	background-color: rgb(232, 226, 214);
+	/*background-color: rgb(232, 230, 220);*/
 }
 
 #table-cell-container {
-	margin: 10px;
+	margin: 10px 0 0 20px;
 	display: inline-block;
 }
 
@@ -94,7 +95,8 @@
 }
 
 .blockContainer:hover {
-	box-shadow: 0px 0px 40px rgba(30, 30, 130, 0.8);
+	/*box-shadow: 0px 0px 40px rgba(30, 30, 130, 0.8);*/
+	box-shadow: 0px 0px 15px #f77841;
 	transition: .3s ease;
 }
 
@@ -140,8 +142,7 @@
 	
 }
 
-.summary {
-	
+.summary {	
 	border-top: 1px solid;
 	border-bottom: 1px solid;
 	text-align: center;
@@ -205,4 +206,8 @@
 .professionalsHeaderDiv {
 	display: inline-block;
 	width: 25%;
+}
+
+.professionalsHeaderDiv h1{
+	font-weight: normal;
 }
