--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -39,7 +39,8 @@ display: none;
 	position: fixed;
 	width: 100%;
 	height: 50px;
-	background-color: rgba(120,120,120,0.4);
+	background-color: rgba(120,120,120,0.8);
+	/*background-color: rgb(102, 53, 25);*/
 	/*background-color: rgba(255, 255, 255, 0.7);*/ /*linear-gradient(to bottom, #34e89e, #0f3443);*/
 	margin: 0;
 	/*-webkit-box-shadow: 0 8px 20px -6px black;*/
@@ -186,7 +187,7 @@ display: none;
 }
 
 .topnav li #news:hover {
-	border-bottom: 5px solid #e34e61/*#ffe711*/;
+	border-bottom: 5px solid #e34e61/*#ffe711*/ !important;
 	color: #e34e61;
 }
 
