--- a/Backend/css/main.css
+++ b/Backend/css/main.css
@@ -1,3 +1,11 @@
+#company-logo {
+    padding: 0.25rem 0.5rem;
+}
+
+#company-logo img {
+    max-height: 2rem;
+}
+
 #user-avatar-div {
 	margin: 0 0.5rem 0 0;
     overflow-x: hidden;
@@ -5,25 +13,25 @@
 	border-radius: 50%;
 	/* border: 1px solid black; */
 	text-align: center;
-	max-height: 3rem;
-	max-width: 3rem;
-	width: 3rem;
-	height: 3rem;
+	max-height: 2.5rem;
+	max-width: 2.5rem;
+	width: 2.5rem;
+	height: 2.5rem;
 }
 
 #user-avatar-1 {
 	display: block;
-	max-height: 3rem;
-	height: 3rem;
-	width: 3rem;
+	max-height: 2.5rem;
+	height: 2.5rem;
+	width: 2.5rem;
 }
 
 #user-avatar {
     overflow-y: hidden;
 	overflow-x: hidden;
 	width: 100%;
-	max-height: 3rem;
-	height: 3rem;
+	max-height: 2.5rem;
+	height: 2.5rem;
 	object-fit: cover;
 	display: inline-block;
 }
