--- a/Homepage/css/main.css
+++ b/Homepage/css/main.css
@@ -20,8 +20,16 @@
     color: #4a4a4a;
 }
 
+#company-logo {
+    padding: 0.25rem 0.5rem;
+}
+
+#company-logo img {
+    max-height: 2rem;
+}
+
 #centered-menus {
-    margin: 0 auto;
+    margin-left: 0;
     transition: .4s ease;
 }
 
@@ -39,6 +47,36 @@
 
 #professionals-menu {
     padding: 0.5rem 1rem;
+}
+
+#user-avatar-div {
+	margin: 0 0.5rem 0 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+	border-radius: 50%;
+	/* border: 1px solid black; */
+	text-align: center;
+	max-height: 2.5rem;
+	max-width: 2.5rem;
+	width: 2.5rem;
+	height: 2.5rem;
+}
+
+#user-avatar-1 {
+	display: block;
+	max-height: 2.5rem;
+	height: 2.5rem;
+	width: 2.5rem;
+}
+
+#user-avatar {
+    overflow-y: hidden;
+	overflow-x: hidden;
+	width: 100%;
+	max-height: 2.5rem;
+	height: 2.5rem;
+	object-fit: cover;
+	display: inline-block;
 }
 
 #account-menu a {
