--- a/Homepage/css/main.css
+++ b/Homepage/css/main.css
@@ -12,6 +12,56 @@
   box-shadow: inset 0 0 0 10px;
 } */
 
+body {
+    background-color: rgb(19, 16, 16);
+}
+
+.greetings {
+    width: 100%;
+    min-height: 700px;
+    max-height: 100%;
+    /* max-height: 900px; */
+    overflow-x: hidden;
+    background: url("../../Static/images/morning-coffee-message-hd-wallpaper.jpg") center center;
+    /* background-position: center; */
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* background-color: black; */
+}
+
+#news-section {
+    width: 100%;
+    height: 400px;
+    background-color: #f2f3f5;
+    /* background-color: rgb(240, 240, 240); */
+}
+
+#services-section {
+    width: 100%;
+    height: 400px;
+    background-color: rgb(255, 255, 255);
+}
+
+#professionals-section {
+    width: 100%;
+    height: 400px;
+    background-color: #f2f3f5;
+    /* background-color: rgb(240, 240, 240); */
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.navbar {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0px;
+    background-color: rgba(250, 250, 250, 0.95);
+    -webkit-box-shadow: 0 5px 15px -8px black;
+    /* background-color: rgb(245, 245, 245); */
+}
+
 .navbar a {
     font-family: "Arial";
 }
@@ -84,34 +134,35 @@
 }
 
 #sign-out-divider {
+    color: #4a4a4a;
     margin: 0.3rem 0.5rem;
-    height: 0.1rem;
+    height: 0.05rem;
 }
 
 #home-menu:hover {
     color: #4a4a4a;
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid#a441d0;
-    transition: .5s ease;
+    transition: .3s ease;
 }
 
 #news-menu:hover {
     color: #4a4a4a;
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #e34e61;
-	transition: .5s ease;
+	transition: .3s ease;
 }
 
 #services-menu:hover {
     color: #4a4a4a;
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #4fe2cf;
-	transition: .5s ease;
+	transition: .3s ease;
 }
 
 #professionals-menu:hover {
     color: #4a4a4a;
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #f77841;
-	transition: .5s ease;
+	transition: .3s ease;
 }
