--- a/Homepage/css/main.css
+++ b/Homepage/css/main.css
@@ -4,7 +4,7 @@
 *::-webkit-scrollbar-thumb {
   width: 27px;
   border-radius: 13px;
-  background-clip: padding-box;
+  background-clip: padding-box;s
   border: 10px solid transparent;
 }
 
@@ -13,6 +13,8 @@
 } */
 
 body {
+    padding: 0;
+    margin: 0;
     background-color: rgb(19, 16, 16);
 }
 
@@ -31,20 +33,20 @@ body {
 
 #news-section {
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     background-color: #f2f3f5;
     /* background-color: rgb(240, 240, 240); */
 }
 
 #services-section {
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     background-color: rgb(255, 255, 255);
 }
 
 #professionals-section {
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     background-color: #f2f3f5;
     /* background-color: rgb(240, 240, 240); */
 }
