--- a/Homepage/css/main.css
+++ b/Homepage/css/main.css
@@ -8,7 +8,7 @@
   border: 10px solid transparent;
 }
 
-*::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {gr
   box-shadow: inset 0 0 0 10px;
 } */
 
@@ -16,16 +16,13 @@ body {
     background-color: rgb(19, 16, 16);
 }
 
-html {
-    image-rendering: crisp-edges;
-    /* image-rendering: -webkit-optimize-contrast; */
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-
 /* Parallax Effect */
 /* Tiny reset thingy */
-body,html{margin:0;padding:0;}
+body,html{margin:0;padding:0;width:100vw;}
+
+.greetings h1 {
+    font-size: 3vw;
+}
 
 .wrapper {
   /* The height needs to be set to a fixed value for the effect to work.
@@ -34,7 +31,7 @@ body,html{margin:0;padding:0;}
   /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
   overflow-x: hidden;
   /* Enable scrolling on the page. */
-  overflow-y: auto;
+  /* overflow-y: scroll; */
   /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
   perspective: 2px;
 }
@@ -55,7 +52,7 @@ body,html{margin:0;padding:0;}
 
 .greetings {
     /* border: 1px solid black; */
-    width: 40%;
+    width: 60%;
 }
 
 .parallax::after {
@@ -92,6 +89,7 @@ body,html{margin:0;padding:0;}
   /* background-size: auto; */
   background-repeat: no-repeat;
   /* overflow: hidden; */
+  max-width: 100%;
 }
 /* Parallax Effect End */
 
@@ -124,11 +122,12 @@ body,html{margin:0;padding:0;}
     color: white;
     width: 100%;
     background-color: rgba(255, 255, 255, 0);
-    position: fixed;
-    position: -webkit-sticky;
+    position: fixed !important;
+    /* position: -webkit-sticky; */
     top: 0px;
     /* background-color: rgba(250, 250, 250, 0.95); */
     -webkit-box-shadow: 0 5px 15px -8px black;
+    visibility: visible;
 }
 
 .navbar a {
@@ -165,58 +164,57 @@ body,html{margin:0;padding:0;}
 }
 
 #home-menu {
-    color: black !important;
+    color: #0a0a0a;
     padding: 0.5rem 1rem;
 }
 
 #news-menu {
-    color: black !important;
+    color: black;
     padding: 0.5rem 1rem;
 }
 
 #services-menu {
-    color: black !important;
+    color: black;
     padding: 0.5rem 1rem;
 }
 
 #professionals-menu {
-    color: black !important;
+    color: black;
     padding: 0.5rem 1rem;
 }
 
-#user-avatar-div {
+/* #user-avatar-div {
 	margin: 0 0.5rem 0 0;
     overflow-x: hidden;
     overflow-y: hidden;
 	border-radius: 50%;
-	/* border: 1px solid black; */
 	text-align: center;
-	max-height: 2.5rem;
-	max-width: 2.5rem;
-	width: 2.5rem;
-	height: 2.5rem;
+	max-height: 2.25rem;
+	max-width: 2.25rem;
+	width: 2.25rem;
+	height: 2.25rem;
 }
 
 #user-avatar-1 {
 	display: block;
-	max-height: 2.5rem;
-	height: 2.5rem;
-	width: 2.5rem;
+	max-height: 2.25rem;
+	height: 2.25rem;
+	width: 2.25rem;
 }
 
 #user-avatar {
     overflow-y: hidden;
 	overflow-x: hidden;
 	width: 100%;
-	max-height: 2.5rem;
-	height: 2.5rem;
+	max-height: 2.25rem;
+	height: 2.25rem;
 	object-fit: cover;
 	display: inline-block;
 }
 
 #account-menu a {
     color: #4a4a4a;
-}
+} */
 
 #sign-out-divider {
     color: #4a4a4a;
@@ -228,22 +226,26 @@ body,html{margin:0;padding:0;}
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid#a441d0;
     transition: .3s ease;
+    background-color: #f2f2f2;
 }
 
 #news-menu:hover {
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #e34e61;
-	transition: .3s ease;
+    transition: .3s ease;
+    background-color: #f2f2f2;
 }
 
 #services-menu:hover {
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #4fe2cf;
-	transition: .3s ease;
+    transition: .3s ease;
+    background-color: #f2f2f2;
 }
 
 #professionals-menu:hover {
     padding: 0.5rem 1rem 0.05rem 1rem ;
     border-bottom: 0.45rem solid #f77841;
-	transition: .3s ease;
+    transition: .3s ease;
+    background-color: #f2f2f2;
 }
