--- a/Navbar/css/navbar.css
+++ b/Navbar/css/navbar.css
@@ -28,8 +28,9 @@
 	display: inline-block;
 }
 
-#is-hoverable:hover {
-    background-color: rgba(255, 255, 255, 1) !important;
+.is-hoverable:hover {
+	background-color: rgba(255, 255, 255, 0) !important;
+	color: black;
 }
 
 #account-menu a {
