--- a/News/css/news.css
+++ b/News/css/news.css
@@ -14,8 +14,8 @@
     }
 
     .columns-wrapper {
-        margin: 0;
-        flex-basis: 100%;
+        margin: 0 auto;
+        flex-basis: 80%;
         display: flex;
         height: 100%;
         /* border: 1px solid black; */
@@ -23,15 +23,23 @@
 
     .news-left-side {
         /* background-color: #ee82ee; */
+        display: flex;
         overflow-y: scroll;
-        flex-basis: 50%;
-        border: 1px solid pink;
+        flex-basis: 35%;
+        /* border: 1px solid pink; */
+        align-content: center;
+    }
+
+    .news-selector-container {
+        /* border: 1px solid red; */
+        width: 500px;
     }
 
     .news-right-side {
         /* background-color: purple; */
-        flex-basis: 50%;
-        border: 1px solid purple;
+        overflow-y: scroll;
+        flex-basis: 35%;
+        /* border: 1px solid purple; */
     }
 
     .news-parent-tile {
@@ -39,14 +47,14 @@
         width: 500px;
     }
 
-    .news-card {
+    .news-featured-card {
         display: block;
         position: relative;
         /* box-sizing: border-box; */
         width: 100%;
     }
 
-    .news-info {
+    .news-featured-info {
         padding: 0.5rem;
         box-sizing: border-box;
         display: block;
@@ -59,38 +67,99 @@
         max-height: 30%;
     }
 
-    .news-title {
+    .news-featured-title {
+        width: 100%;
         font-size: 2rem;
         color: white;
+        overflow-x: scroll;
+        max-height: 3rem;
     }
 
-    .news-desc {
+    .news-featured-desc {
+        width: 450px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
         font-size: 0.8rem;
         padding: 0.5rem;
         color: rgb(205, 205, 205);
     }
 
-    .news-image-container {
+    .news-featured-image-container {
         height: 100%;
-        width: 100%;
+        width: 500px;
         /* display: block; */
+        /* border: 1px solid blue; */
     }
 
-    .news-image-container::after {
+    .news-featured-image-container::after {
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1));
     }
 
-    .news-image {
+    .news-featured-image {
         width: 500px;
         height: 100%;
     }
 
+    .news-carousel-tile {
+        width: 500px;
+        overflow-x: scroll;
+        /* border: 1px solid violet; */
+    }
+
+    .news-select .news-older-info .news-older-title {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .news-older-card {
+        height: 220px;
+        margin-left: 25px;
+        margin-right: 25px;
+        /* border: 1px solid purple; */
+    }
+
+    .news-older-image-container {
+        /* border: 1px solid black; */
+        overflow-y: hidden;
+        max-height: 150px;
+    }
+
+    .news-older-image {
+        overflow: hidden;
+        min-height: 170px;
+        max-height: 170px;
+        min-width: 170px;
+        max-width: 200px;
+    }
+
+    .news-older-info {
+        min-width: 170px;
+        max-width: 200px;
+        /* border: 1px solid black; */
+        overflow-y: scroll;
+        height: 60px;
+        padding: 5px;
+    }
+
+    .news-older-title {
+        font-weight: bold;
+    }
+
+/* Right Side */
+
+    .news-content-title {
+        /* text-align: center; */
+        font-weight: bold;
+        font-size: 2rem;
+    }    
+
     .parent-tile {
-        border: 2px solid pink;
+        /* border: 2px solid pink; */
     }
 
     .child-tile {
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
     }
 
 }
