--- a/Navbar/css/navbar.css
+++ b/Navbar/css/navbar.css
@@ -1,3 +1,101 @@
+.navbar {
+    transition: all .5s ease;
+    color: white;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(255, 255, 255, 0); */
+    position: fixed !important;
+    /* position: -webkit-sticky; */
+    top: 0px;
+    /* background-color: rgba(250, 250, 250, 0.95); */
+    -webkit-box-shadow: 0 5px 15px -8px black;
+    box-shadow: 0 5px 15px -8px black;
+    visibility: visible;
+}
+
+.navbar a {
+    font-family: "Arial";
+}
+
+.navbar-item:hover span{
+    color: black;
+}
+
+.navbar .navbarLinks {
+    color: white;
+}
+
+.navbarLinks:hover {
+    color: black !important;
+}
+
+.company-logo {
+    padding: 0.25rem 0.5rem;
+}
+
+.company-logo img {
+    max-height: 2rem;
+}
+
+#centered-menus {
+    margin-left: 0;
+    transition: .4s ease;
+}
+
+#home-menu {
+    color: #0a0a0a;
+    padding: 0.5rem 1rem;
+}
+
+#news-menu {
+    color: black;
+    padding: 0.5rem 1rem;
+}
+
+#services-menu {
+    color: black;
+    padding: 0.5rem 1rem;
+}
+
+#professionals-menu {
+    color: black;
+    padding: 0.5rem 1rem;
+}
+
+#sign-out-divider {
+    color: #4a4a4a;
+    margin: 0.3rem 0.5rem;
+    height: 0.05rem;
+}
+
+#home-menu:hover {
+    padding: 0.5rem 1rem 0.05rem 1rem ;
+    border-bottom: 0.45rem solid#a441d0;
+    transition: .3s ease;
+    background-color: #f2f2f2;
+}
+
+#news-menu:hover {
+    padding: 0.5rem 1rem 0.05rem 1rem ;
+    border-bottom: 0.45rem solid #e34e61;
+    transition: .3s ease;
+    background-color: #f2f2f2;
+}
+
+#services-menu:hover {
+    padding: 0.5rem 1rem 0.05rem 1rem ;
+    border-bottom: 0.45rem solid #4fe2cf;
+    transition: .3s ease;
+    background-color: #f2f2f2;
+}
+
+#professionals-menu:hover {
+    padding: 0.5rem 1rem 0.05rem 1rem ;
+    border-bottom: 0.45rem solid #f77841;
+    transition: .3s ease;
+    background-color: #f2f2f2;
+}
+
 #user-avatar-div {
 	margin: 0 0.5rem 0 0;
     overflow-x: hidden;
