--- a/Homepage/css/main.css
+++ b/Homepage/css/main.css
@@ -118,7 +118,7 @@ body,html{margin:0;padding:0;width:100vw;}
 }
 
 .navbar {
-    background-color: rgba(255, 255, 255, 0) !important;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 /* .navbar {
