--- a/Chat/css/custom.css
+++ b/Chat/css/custom.css
@@ -1,6 +1,16 @@
+body, html {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 #chat-container {
     max-width: 500px;
-    height: 200px;
+    max-height: 100%;
+    /* max-height: 500px;
+    height: 500px; */
     margin: auto;
     background-color: rgb(245, 245, 245);
     padding: 30px;
@@ -11,20 +21,88 @@
     padding: 5px 0 5px 5px;
 }
 
-#log {
+#log-outer {
     color: rgba(0, 0, 0, 0);
     text-shadow: 0 0 black;
     width: 100%;
-    max-height: 450px;
+    min-height: 300px;
+    max-height: 300px;
     overflow-y: scroll;
     transition: color .3s ease;
+    position: relative;
 }
 
-#log:hover {
+#log-outer:hover {
     color: rgba(0, 0, 0, 0.3);
 }
 
-*::-webkit-scrollbar,
+#log-outer::-webkit-scrollbar,
+#log-outer::-webkit-scrollbar-thumb {
+  width: 27px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+}
+
+#log-outer::-webkit-scrollbar-thumb {    
+  box-shadow: inset 0 0 0 10px;
+}
+
+#new-message-container-container {
+    position: relative;
+}
+
+.hidden-notice {
+    display: none;
+}
+
+#new-message-container {
+    transition: all .3s ease;
+    background-color: rgb(230, 230, 230, 1);
+    z-index: 1000;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    margin: auto;
+    /* border: 1px solid black; */
+    text-align: center;
+}
+
+#scroll-to-new-messages {
+    text-decoration: none;
+    color: inherit;
+}
+
+#new-message-alert {
+
+}
+
+#click-notice {
+    font-size: 0.7rem;
+}
+
+#log {
+    width: 100%;
+    position: absolute;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.text-message-container {
+    margin: 0px 10px 15px 20px;
+}
+
+.text-message {
+    overflow-wrap: break-word;
+    padding: 3px;
+    background-color: rgb(240, 240, 240, 1);
+    /* border: 1px solid black; */
+    border-radius: 5px;;
+}
+
+/* *::-webkit-scrollbar,
 *::-webkit-scrollbar-thumb {
   width: 27px;
   border-radius: 13px;
@@ -34,7 +112,7 @@
 
 *::-webkit-scrollbar-thumb {        
   box-shadow: inset 0 0 0 10px;
-}
+} */
 
 /* ::-webkit-scrollbar {
     visibility: hidden;
