--- a/Services/css/services.css
+++ b/Services/css/services.css
@@ -1,7 +1,7 @@
 .services-wrapper {
     padding: 10% 0 10% 0;
-    height: 100%;
-    width: 100vh;
+    height: 100vh;
+    width: 100vw;
     /* background-color: #f2f3f5; */
     display: flex;
 }
