--- a/News/css/news.css
+++ b/News/css/news.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 1024px) {
 
     .news-wrapper {
-        padding: 0;
+        padding: 3% 0;
         height: 100vh;
         width: 100vw;
         background-color: #f2f3f5;
@@ -44,8 +44,8 @@
 
     .news-featured-card {
         display: block;
-        position: relative;
-        /* box-sizing: border-box; */
+        /* position: relative; */
+        box-sizing: border-box;
         width: 100%;
     }
 
@@ -58,7 +58,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        width: 100%;
+        /* width: 100%; */
         max-height: 30%;
     }
 
@@ -82,24 +82,28 @@
 
     .news-featured-image-container {
         max-height: 300px;
-        width: 600px;
+        width: 650px;
+        position: relative;
     }
 
     .news-featured-image-container::after {
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1));
     }
 
-    .news-featured-card {
-        width: 100%;
-    }
-
     .news-featured-image {
         /* width: 500px; */
         height: 100%;
+        /* position: relative; */
+    }
+
+    .news-carousel-tile-container {
+        width: 100%;
+        /* border: 1px solid black; */
     }
 
     .news-carousel-tile {
-        width: 500px;
+        margin: auto;
+        width: 450px;
         overflow-x: scroll;
         /* border: 1px solid violet; */
     }
